--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 
 [lib]
 crate-type = ["cdylib"]
-
+ 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 regex = "1"
 itertools = "0.10"
 mlua = { version = "0.8", features = ["luajit", "vendored", "module", "serialize"] }
